bases/testapp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: testapp
  labels:
    app: testapp
spec:
  type: ClusterIP
  selector:
    app: testapp
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
