bases/testapp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: testapp
  labels:
    app: testapp
spec:
  ingressClassName: nginx
  rules:
  - host: testapp.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: testapp
            port:
              number: 80
